Minor bug fix: pictures class width was too wide.

--- a/rio.css
+++ b/rio.css
@@ -142,7 +142,7 @@ ul, #container, #buttonContainer, #map, #results {
 }
 
 #pictures {
-	width: 1000px;
+	width: 900px;
 	padding-left: 120px;
 }
 
